fixed particle scaling on mobile

--- a/css/particles.css
+++ b/css/particles.css
@@ -27,7 +27,7 @@ canvas{
 #particles-js{
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   background-color: #323232;
   background-image: url('');
